ship to netlify

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <script src="scripts.js"></script>
+
+    <h1 class="test" id="ColoredText">I'm a random color object</h1>
+    <br/>
+    <button onclick="RandomColor()">Click me!</button>
+
+
+    <script src="scripts.js"></script> <!--<script> should always be the last line in <body> due to performance of loading the webpage-->
 </body>
 </html>
